--- a/SimulQtWidgets_x64_VC11.vcxproj.filters
+++ b/SimulQtWidgets_x64_VC11.vcxproj.filters
@@ -80,6 +80,15 @@
     <ClCompile Include="GeneratedFiles\Debug\moc_WidgetCollection.cpp">
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
+    <ClCompile Include="QColourEdit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_QColourEdit.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_QColourEdit.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="QIntSliderEdit.h">
@@ -115,5 +124,16 @@
     <CustomBuild Include="GeneratedFiles\ui_QSliderEdit.h">
       <Filter>Generated Files</Filter>
     </CustomBuild>
+    <CustomBuild Include="QColourEdit.h">
+      <Filter>Header Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="QColourEdit.ui">
+      <Filter>Form Files</Filter>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GeneratedFiles\ui_QColourEdit.h">
+      <Filter>Generated Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
