--- a/SimulQtWidgets_x64_VC11.vcxproj.filters
+++ b/SimulQtWidgets_x64_VC11.vcxproj.filters
@@ -89,6 +89,9 @@
     <ClCompile Include="GeneratedFiles\Release\moc_QColourEdit.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="SimulQtWidgets.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="QIntSliderEdit.h">
@@ -134,6 +137,9 @@
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_QColourEdit.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SimulQtWidgets.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
